--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">LoginPage</string>
-    <string name="app_version">1.0.1beta</string>
-    <string name="user_no">请输入手机号：</string>
+    <string name="app_version">1.0.2 beta</string>
+    <string name="user_num">请输入手机号：</string>
     <string name="button_message">登陆</string>
     <string name="icon_message">图标</string>
     <string name="password_message">请输入密码：</string>
